# self_playing_ruler

./: .gitignore  LICENSE  README.md  README_zh.md  screenplay_zh.xlsx
prototype/host_computer/: little_star.py  love105.py  ni_ruo_san_dong.py  serial_send.py  sunshine_rainbow_white_horse.py
prototype/model/: 10cm薄尺.SLDPRT  servo_horn(sg90).SLDPRT  servo_motor(SG90).SLDPRT  丝杆底座.SLDPRT  丝杆衬套.SLDPRT  光驱丝杆步进电机.SLDASM  动画.SLDASM  固定帽.SLDPRT  尺子演奏器验证机.SLDASM  底板.SLDPRT  步进电机.SLDPRT  滑块.SLDPRT  盖板.SLDPRT  舵机固定器(按压).SLDPRT  舵机固定架L.SLDPRT  舵机固定架L镜向.SLDPRT
servo_motor_test/main/: mcpwm_servo_control_example_main.c
step_motor_test/main/: CMakeLists.txt  stepper_motor_example_main.c  stepper_motor_test_main.c
tools/0-USB to serial CH343 driver/: CH343-drive.html
v1/: bom_cn.xlsx  bom_zh.xlsx  screenplay.xlsx  screenplay_zh.xlsx  剧本.xlsx
v1/code/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
v1/code/main/: CMakeLists.txt  CN.md  Kconfig.projbuild  digital_mic.c  digital_mic.h  electromagnet.c  electromagnet.h  gpio_pin_config.h  h_bridge.c  h_bridge.h  idf_component.yml  key.c  key.h  main.c  nls.c  nls.h  note_decode.c  note_decode.h  play.c  play.h  rgb_led.c  rgb_led.h  ruler.c  ruler.h  servo_motor.c  servo_motor.h  signal_fft.c  signal_fft.h  sound_fft.c  sound_fft.h  step_motor.c  step_motor.h  terminal.c  terminal.h  tinyusb_device.c  tinyusb_device.h  tusb_midi.c  tusb_midi.h  uart_ctrl.c
v1/code/main/tusb/: tusb_config.h  usb_descriptors.c
v1/model/: Guitar Pick 0.7mm.SLDPRT  丝杆连接器.SLDPRT  固定块.SLDPRT  夹板底座.SLDPRT  底座.SLDPRT  步进电机固定器.SLDPRT  滑块.SLDPRT  演奏器v1.0_A.SLDASM  电磁铁固定座.SLDPRT  舵机+拨片.SLDASM  舵机固定.SLDPRT
v1/model_1.1/: 丝杆连接器.SLDPRT  压板.SLDPRT  (+8 more)
v1/model_1.1.1/: 拨片.SLDPRT  滑块（新）.SLDPRT  电磁铁固定座.SLDPRT  舵机+拨片底座.SLDASM
(+192 files in other folders)
